[tool.poetry]
name = "regexbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.41.2"
regex = "^2025.9.18"
aiohttp = "^3.13.0"
prometheus-client = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
